Fix missing tests dir in testable jar