@@ -18,6 +18,7 @@
 package io.ballerina.projects.directory;
 
 import io.ballerina.projects.PackageDescriptor;
+import io.ballerina.projects.util.ProjectConstants;
 import io.ballerina.projects.util.ProjectUtils;
 import org.ballerinalang.toml.exceptions.TomlException;
 
@@ -118,7 +119,7 @@ public class ProjectFiles {
         List<DocumentData> testSrcDocs;
         Path testDirPath = moduleDirPath.resolve("tests");
         if (Files.isDirectory(testDirPath)) {
-            testSrcDocs = loadDocuments(testDirPath);
+            testSrcDocs = loadTestDocuments(testDirPath);
         } else {
             testSrcDocs = Collections.emptyList();
         }
@@ -137,17 +138,42 @@ public class ProjectFiles {
         }
     }
 
+    public static List<DocumentData> loadTestDocuments(Path dirPath) {
+        try (Stream<Path> pathStream = Files.walk(dirPath, 1)) {
+            return pathStream
+                    .filter(matcher::matches)
+                    .map(ProjectFiles::loadTestDocument)
+                    .collect(Collectors.toList());
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
     public static DocumentData loadDocument(Path documentFilePath) {
         String content;
         if (documentFilePath == null) {
             throw new RuntimeException("document path cannot be null");
         }
         try {
-            content = new String(Files.readAllBytes(documentFilePath), Charset.defaultCharset());
+            content = Files.readString(documentFilePath, Charset.defaultCharset());
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
         return DocumentData.from(Optional.of(documentFilePath.getFileName()).get().toString(), content);
+    }
+
+    public static DocumentData loadTestDocument(Path documentFilePath) {
+        String content;
+        if (documentFilePath == null) {
+            throw new RuntimeException("document path cannot be null");
+        }
+        try {
+            content = Files.readString(documentFilePath, Charset.defaultCharset());
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+        String documentName = Optional.of(documentFilePath.getFileName()).get().toString();
+        return DocumentData.from(ProjectConstants.TEST_DIR_NAME + "/" + documentName, content);
     }
 
     public static PackageDescriptor createPackageDescriptor(Path ballerinaTomlFilePath) {
